welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
  
 val occurences = Array.fill(nums)(0)
  
 return false
}